# AutomationIDE

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  auto_py_to_exe.json  dev.toml  dev_requirements.txt  dev_setup.py  pyproject.toml  requirements.txt  setup.py  stable.toml
.circleci/: config.yml
.github/workflows/: ITE-github-actions_dev.yml  ITE-github-actions_stable.yml  dev_python3_10.yml  dev_python3_11.yml  dev_python3_12.yml  dev_python3_8.yml  dev_python3_9.yml  stable_python3_10.yml  stable_python3_11.yml  stable_python3_12.yml  stable_python3_8.yml  stable_python3_9.yml
automation_editor/: __init__.py
automation_editor/automation_editor_ui/complete/: complete_extend.py
automation_editor/automation_editor_ui/editor_main/: main_ui.py
automation_editor/automation_editor_ui/extend_multi_language/: extend_traditional_chinese.py  update_language_dict.py
automation_editor/automation_editor_ui/menu/: build_menubar.py  menu_utils.py
automation_editor/automation_editor_ui/show_code_window/: code_window.py
automation_editor/automation_editor_ui/syntax/: syntax_extend.py  syntax_keyword.py
automation_editor/extend/mail_thunder_extend/: mail_thunder_setting.py
automation_editor/extend/process_executor/: process_executor_utils.py  task_process_manager.py
automation_editor/utils/exception/: exception_tags.py
automation_editor/utils/file_process/: get_dir_file_list.py
automation_editor/utils/json_format/: json_process.py
automation_editor/utils/test_executor/: check_mail_thunder.py  task_process_manager.py
automation_ide/: __init__.py
automation_ide/automation_editor_ui/editor_main/: main_ui.py
automation_ide/automation_editor_ui/extend_ai_gui/: ai_gui_global_variable.py  cot_code_review_gui.py
automation_ide/automation_editor_ui/extend_multi_language/: extend_english.py  extend_traditional_chinese.py  update_language_dict.py
automation_ide/automation_editor_ui/menu/: build_menubar.py  menu_utils.py
automation_ide/automation_editor_ui/prompt_edit_gui/: cot_prompt_editor_widget.py  main_prompt_edit_widget.py  skills_prompt_editor_widget.py
automation_ide/automation_editor_ui/syntax/: syntax_extend.py  syntax_keyword.py
automation_ide/extend/mail_thunder_extend/: mail_thunder_setting.py
automation_ide/extend/process_executor/: process_executor_utils.py  python_task_process_manager.py
automation_ide/utils/exception/: exception_tags.py  exceptions.py
automation_ide/utils/json_format/: json_process.py
automation_ide/utils/logging/: logger.py
deprecation_for_old_python/: deprecation_dev_setup.py  deprecation_setup.py
docs/: conf.py  requirements.txt
docs/source/: conf.py  index.rst
docs/source/Eng/: eng_index.rst  how_to_extend_ui.rst  ui.rst
docs/source/Zh/: how_to_extend_ui.rst  ui.rst  zh_index.rst
docs/source/example/: example_index.rst
docs/source/ui_doc/: ui_doc_index.rst
exe/: auto_py_to_exe_setting.json  auto_py_to_exe_setting_linux.json  automation_ide_setup_config.ifp  start_automation_editor.py  test.txt  test.yml  user_setting.json
exe/.wdm/: drivers.json
integration_testing_environment/: __init__.py  start_ite_option.py
integration_testing_environment/extend/mail_thunder_extend/: mail_thunder_setting.py
integration_testing_environment/integration_testing_environment_ui/api_testka_menu/: build_api_testka_menu.py
integration_testing_environment/intergration_testing_environment_ui/: extend_je_editor_ui.py
integration_testing_environment/start_ite/: start_ite_option.py
test/test_script_source/: apitestka_script.json  test_py.py  webrunner_script.json
(+154 files in other folders)
