# Rename to dev version
# This is dev version
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automation_ide_dev"
version = "0.0.34"
authors = [
    { name = "JE-Chen", email = "jechenmailman@gmail.com" },
]
description = "AutomationEditor for multi automation"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "je-editor", "je_auto_control", "je_web_runner",
    "je_load_density", "je_api_testka", "je-mail-thunder",
    "automation-file"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Intergration-Automation-Testing/AutomationEditor"
Code = "https://github.com/Intergration-Automation-Testing/AutomationEditor"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = { namespaces = false }
